<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <Button
        android:id="@+id/button_Back"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:background="@drawable/button_v2"
        android:drawableStart="@drawable/ic_keyboard_arrow_left"
        android:fontFamily="Roboto"
        android:paddingEnd="40sp"
        android:text="@string/Location"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#FFC8D0FF"
        android:textColorHighlight="#FFC8D0FF"
        android:textSize="30sp"
        tools:ignore="RtlSymmetry" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.SLT.chatloca.MapsActivity" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:layout_marginTop="470sp"
        android:layout_marginStart="5sp"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/lview"
            android:paddingStart="10sp"
            android:fontFamily="Roboto"
            android:left="10dp"
            android:opacity="transparent"
            android:text="@string/Name"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_marginTop="10sp"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:background="@drawable/lview"
            android:paddingStart="10sp"
            android:fontFamily="Roboto"
            android:left="10dp"
            android:opacity="transparent"
            android:text="@string/location"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_marginTop="10sp"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:background="@drawable/lview"
            android:paddingStart="10sp"
            android:fontFamily="Roboto"
            android:left="10dp"
            android:opacity="transparent"
            android:text="@string/name_of_location"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

</RelativeLayout>