<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/background"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
        tools:context="com.example.soundloneteamcomp.chitchat.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_BackProfile"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:background="@drawable/button_v2"
            android:drawableStart="@drawable/ic_keyboard_arrow_left"
            android:fontFamily="Roboto"
            android:paddingEnd="40sp"
            android:text="@string/user_s_name"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="#FFC8D0FF"
            android:textColorHighlight="#FFC8D0FF"
            android:textSize="30sp"
            tools:ignore="RtlSymmetry" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_marginStart="150sp"
                android:background="#000000"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/ic_request_friend" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginTop="5sp"
            android:background="#FFF0F0F0"
            android:fontFamily="Roboto"
            android:paddingStart="6sp"
            android:paddingTop="6sp"
            android:singleLine="true"
            android:text="@string/basic_profile"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginBottom="5sp"
                android:background="@drawable/ic_user" />

            <TextView
                android:id="@+id/TextView_NameProfile"
                android:layout_width="320sp"
                android:layout_height="40sp"
                android:layout_marginStart="5sp"
                android:background="@drawable/line"
                android:fontFamily="Roboto"
                android:singleLine="true"
                android:text=""
                android:textColor="#202020"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/TextView_icon_gender"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginBottom="5sp"
                android:background="@drawable/ic_user" />

            <TextView
                android:id="@+id/TextView_genderProfile"
                android:layout_width="320sp"
                android:layout_height="40sp"
                android:layout_marginStart="5sp"
                android:background="@drawable/line"
                android:fontFamily="Roboto"
                android:singleLine="true"
                android:text=""
                android:textColor="#202020"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/TextView_icon_calendar"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginBottom="5sp"
                android:background="@drawable/ic_birthday" />

            <TextView
                android:id="@+id/TextView_birthdayProfile"
                android:layout_width="320sp"
                android:layout_height="40sp"
                android:layout_marginStart="5sp"

                android:fontFamily="Roboto"
                android:singleLine="true"
                android:text=""
                android:textColor="#202020"
                android:textSize="25sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:background="#FFF0F0F0"
            android:fontFamily="Roboto"
            android:paddingStart="6sp"
            android:paddingTop="6sp"
            android:singleLine="true"
            android:text="@string/private_information"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/TextView_icon_email"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:background="@drawable/ic_email" />

            <TextView
                android:id="@+id/TextView_emailProfile"
                android:layout_width="320sp"
                android:layout_height="40sp"
                android:layout_marginStart="5sp"
                android:background="@drawable/line"
                android:fontFamily="Roboto"
                android:singleLine="true"
                android:text=""
                android:textColor="#202020"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/TextView_icon_phone"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginBottom="3sp"
                android:background="@drawable/ic_phone" />

            <TextView
                android:id="@+id/TextView_phoneProfile"
                android:layout_width="320sp"
                android:layout_height="40sp"
                android:layout_marginStart="5sp"
                android:background="@drawable/line"
                android:fontFamily="Roboto"
                android:singleLine="true"
                android:text=""
                android:textColor="#202020"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/TextView_icon_addressProfile"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginBottom="1sp"
                android:background="@drawable/ic_address" />

            <TextView
                android:id="@+id/TextView_addressProfile"
                android:layout_width="320sp"
                android:layout_height="40sp"
                android:layout_marginStart="5sp"
                android:fontFamily="Roboto"
                android:singleLine="true"
                android:text=""
                android:textColor="#202020"
                android:textSize="25sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button_Edit"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:background="@drawable/button_v2"
            android:fontFamily="Roboto"
            android:text="@string/edit"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="#FFC8D0FF"
            android:textColorHighlight="#FFC8D0FF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_Logout"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_marginTop="5sp"
            android:background="@drawable/button"
            android:fontFamily="Roboto"
            android:text="@string/logout"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="#FFFFFFFF"
            android:textSize="30sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>